--- a/hspcmp/makefile.linux
+++ b/hspcmp/makefile.linux
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall --input-charset=cp932 --exec-charset=cp932 -DHSPLINUX -DHSPDEBUG
+CFLAGS = -Wall -std=c++11 --input-charset=cp932 --exec-charset=cp932 -DHSPLINUX -DHSPDEBUG
 OBJS = ahtmodel.o ahtobj.o codegen.o comutil.o errormsg.o hsc3.o \
     hspcmd.o label.o localinfo.o main.o membuf.o strnote.o \
     tagstack.o token.o linux/supio_linux.o
@@ -38,4 +38,4 @@ clean:
 
 release:
 	make clean
-	make "CFLAGS = -O3 -Wall --input-charset=cp932 --exec-charset=cp932 -DHSPLINUX"
+	make "CFLAGS = -O3 -Wall -std=c++11 --input-charset=cp932 --exec-charset=cp932 -DHSPLINUX"
