Former-commit-id: 526978a29b6283039012cfed18ae814b98601cb3

--- a/tools/win32/hsed3_footy2/hsed_vc2003.vcproj
+++ b/tools/win32/hsed3_footy2/hsed_vc2003.vcproj
@@ -220,6 +220,9 @@
 				RelativePath="Poppad.h">
 			</File>
 			<File
+				RelativePath="popfile.h">
+			</File>
+			<File
 				RelativePath="resource.h">
 			</File>
 			<File
