--- a/tools/win32/hsed3_footy2/hsed_vc2008.vcproj
+++ b/tools/win32/hsed3_footy2/hsed_vc2008.vcproj
@@ -321,6 +321,10 @@
 				>
 			</File>
 			<File
+				RelativePath="popfile.h"
+				>
+			</File>
+			<File
 				RelativePath="resource.h"
 				>
 			</File>
