--- a/tools/win32/hsed3_footy2/hsed_vc2005.vcproj
+++ b/tools/win32/hsed3_footy2/hsed_vc2005.vcproj
@@ -322,6 +322,10 @@
 				>
 			</File>
 			<File
+				RelativePath="popfile.h"
+				>
+			</File>
+			<File
 				RelativePath="resource.h"
 				>
 			</File>
