デバッグウィンドウがクラッシュするため最適化を無効化
Former-commit-id: 8c4f4eb870a1c4f009ac860cb20b19424461390a

--- a/tools/win32/hsp3debug/hsp3debug_vc2013.vcxproj
+++ b/tools/win32/hsp3debug/hsp3debug_vc2013.vcxproj
@@ -166,6 +166,7 @@ copy $(TargetPath) ..\..\..\hsp3\win32gui\release\
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>None</DebugInformationFormat>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)hsp3debug_u8.dll</OutputFile>
