--- a/tools/win32/hsed3_footy2/Poppad.rc
+++ b/tools/win32/hsed3_footy2/Poppad.rc
@@ -252,7 +252,7 @@ FONT 9, "ＭＳ Ｐゴシック", 0, 0, 0x0
 BEGIN
     CTEXT           "HSP script editor",IDC_STATIC,41,12,67,8
     ICON            "OniPad",IDC_STATIC,8,8,20,20
-    CTEXT           "For Windows version 3.5 beta",IDC_STATIC,47,19,89,8
+    CTEXT           "For Windows version 3.5",IDC_STATIC,47,19,89,8
     CTEXT           "Copyright 1997-2017 onion software",IDC_STATIC,0,37,159,8
     DEFPUSHBUTTON   "OK",IDOK,49,101,57,14,WS_GROUP
     CTEXT           "http://hsp.tv/",IDC_STATICLINK,34,85,90,8,SS_NOTIFY
@@ -758,8 +758,8 @@ IDC_ONURL               CURSOR                  "url.cur"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 3,3,1,0
- PRODUCTVERSION 3,3,1,0
+ FILEVERSION 3,5,0,0
+ PRODUCTVERSION 3,5,0,0
  FILEFLAGSMASK 0x1fL
 #ifdef _DEBUG
  FILEFLAGS 0x9L
@@ -777,11 +777,11 @@ BEGIN
             VALUE "FileDescription", "HSP スクリプトエディタ"
             VALUE "FileVersion", "3.5"
             VALUE "InternalName", "スクリプト エディタ"
-            VALUE "LegalCopyright", "Copyright (C) 1997-2015 Onion Software"
+            VALUE "LegalCopyright", "Copyright (C) 1997-2017 Onion Software"
             VALUE "OriginalFilename", "hsed3.exe"
-            VALUE "PrivateBuild", "1.05"
+            VALUE "PrivateBuild", "1.06"
             VALUE "ProductName", "Hot Soup Processor"
-            VALUE "ProductVersion", "3.4"
+            VALUE "ProductVersion", "3.5"
         END
     END
     BLOCK "VarFileInfo"
