--- a/package/linux/makefile.raspbian
+++ b/package/linux/makefile.raspbian
@@ -48,6 +48,9 @@ OBJS = \
 	src/hsp3dish/linux/supio_linux.do
 
 OBJS_CMP = \
+	src/hspcmp/main.o \
+	src/hspcmp/token.o \
+	src/hspcmp/linux/supio_linux.o \
 	src/hspcmp/ahtmodel.o \
 	src/hspcmp/ahtobj.o \
 	src/hspcmp/codegen.o \
@@ -57,12 +60,9 @@ OBJS_CMP = \
 	src/hspcmp/hspcmd.o \
 	src/hspcmp/label.o \
 	src/hspcmp/localinfo.o \
-	src/hspcmp/main.o \
 	src/hspcmp/membuf.o \
 	src/hspcmp/strnote.o \
-	src/hspcmp/tagstack.o \
-	src/hspcmp/token.o \
-	src/hspcmp/linux/supio_linux.o
+	src/hspcmp/tagstack.o
 
 OBJS_CL = \
 	src/hsp3/linux/main.o \
