スクリプトエディタの更新 VS2017プロジェクトファイルの追加 VS2003プロジェクトファイルの削除
Former-commit-id: b2fb6ee1dedacb3ccdda8eb7aaa2d1eab70fc233

--- a/tools/win32/hsed3_footy2/Footy2/Footy2_vc2005.vcproj
+++ b/tools/win32/hsed3_footy2/Footy2/Footy2_vc2005.vcproj
@@ -347,6 +347,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ImageController.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\module.def"
 				>
 			</File>
@@ -576,6 +580,10 @@
 			</File>
 			<File
 				RelativePath=".\HSplitter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ImageController.h"
 				>
 			</File>
 			<File
