--- a/tools/win32/hsed3_footy2/Footy2/Footy2_vc2008.vcproj
+++ b/tools/win32/hsed3_footy2/Footy2/Footy2_vc2008.vcproj
@@ -346,6 +346,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ImageController.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\module.def"
 				>
 			</File>
@@ -575,6 +579,10 @@
 			</File>
 			<File
 				RelativePath=".\HSplitter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ImageController.h"
 				>
 			</File>
 			<File
