--- a/tools/win32/hsed3_footy2/hsed_vc2008.vcproj
+++ b/tools/win32/hsed3_footy2/hsed_vc2008.vcproj
@@ -62,6 +62,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/FORCE:MULTIPLE"
 				AdditionalDependencies="comsuppw.lib"
 				OutputFile="$(OutDir)/hsed3.exe"
 				LinkIncremental="2"
@@ -144,6 +145,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/FORCE:MULTIPLE"
 				AdditionalDependencies="comsuppw.lib"
 				OutputFile="$(OutDir)/hsed3.exe"
 				LinkIncremental="1"
@@ -200,6 +202,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CustomColorKeywords.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CustomConfig.cpp"
+				>
+			</File>
+			<File
 				RelativePath="exttool.cpp"
 				>
 			</File>
@@ -217,6 +227,10 @@
 			</File>
 			<File
 				RelativePath="membuf.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\PackIconResource.cpp"
 				>
 			</File>
 			<File
@@ -293,6 +307,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CustomColorKeywords.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CustomConfig.h"
+				>
+			</File>
+			<File
 				RelativePath="exttool.h"
 				>
 			</File>
@@ -317,11 +339,11 @@
 				>
 			</File>
 			<File
-				RelativePath="poppad.h"
+				RelativePath=".\PackIconResource.h"
 				>
 			</File>
 			<File
-				RelativePath="popfile.h"
+				RelativePath="poppad.h"
 				>
 			</File>
 			<File
