--- a/tools/win32/hsed3_footy2/poppad_en.rc
+++ b/tools/win32/hsed3_footy2/poppad_en.rc
@@ -134,7 +134,7 @@ BEGIN
     END
     POPUP "Help(&H)"
     BEGIN
-        MENUITEM "Keywords(&K)...\tF1",         IDM_KWHELP
+        MENUITEM "Search Keyword(&K)...\tF1",         IDM_KWHELP
         MENUITEM "Programming Manual(&P)...",   IDM_HSPMAN1
         MENUITEM "Command Reference(&R)...",    IDM_HSPMAN2
         MENUITEM "Manual Index(&I)...",         IDM_HSPMAN3
@@ -865,7 +865,7 @@ BEGIN
     END
     BLOCK "VarFileInfo"
     BEGIN
-        VALUE "Translation", 0x411, 1200
+        VALUE "Translation", 0x409, 1200
     END
 END
 
