--- a/tools/win32/hsed3_footy2/Footy2/Footy2_vc2008.vcproj
+++ b/tools/win32/hsed3_footy2/Footy2/Footy2_vc2008.vcproj
@@ -265,7 +265,7 @@
 				PrecompiledHeaderThrough="Global.h"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="0"
+				DebugInformationFormat="3"
 				ForcedIncludeFiles="Global.h;zmouse.h"
 			/>
 			<Tool
@@ -343,6 +343,10 @@
 			</File>
 			<File
 				RelativePath=".\HSplitter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ImageController.cpp"
 				>
 			</File>
 			<File
@@ -575,6 +579,10 @@
 			</File>
 			<File
 				RelativePath=".\HSplitter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ImageController.h"
 				>
 			</File>
 			<File
